<project>
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.teletha</groupId>
	<artifactId>cointoss-functions</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>
	<name>cointoss-functions</name>
	<description/>
	<dependencies>
		<dependency>
			<groupId>com.google.cloud.functions</groupId>
			<artifactId>functions-framework-api</artifactId>
			<version>LATEST</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>sinobu</artifactId>
			<version>2.1.0</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
	</dependencies>
	<licenses>
		<license>
			<name>The MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>
	<repositories>
		<repository>
			<id>Maven</id>
			<name>repo1.maven.org</name>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>JCenter</id>
			<name>jcenter.bintray.com</name>
			<url>https://jcenter.bintray.com/</url>
		</repository>
	</repositories>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<encoding>UTF-8</encoding>
					<compilerArgs>
						<arg>-proc:none</arg>
					</compilerArgs>
					<compilerId>eclipse</compilerId>
				</configuration>
				<dependencies>
	             <dependency>
	               <groupId>org.codehaus.plexus</groupId>
	               <artifactId>plexus-compiler-eclipse</artifactId>
	               <version>2.8.8</version>
	             </dependency>
	           </dependencies>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>